welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:12: error: not found: value j
    T(j+count+1)=i+1
      ^